CSS/Mandir.css
.Header-Image
{
    padding-left: 550px;
    line-height: 10px;
    align-content:center; 
}

button
{

    height: 100px;
    width:100px;
    line-height:50px;
    border: 2px solid #f5f5f5;
    border-radius: 50%;
    color:#f5f5f5;
    text-align:center;
    background: #464646;
    box-shadow: 0 0 3px gray;
    font-size:10px;
    font-weight:bold;
    text-overflow: clip;
    


}
.SriRam
{
    height: 524px;
    width: 400px;
    overflow: hidden;
}

.SriRam img
{
    height: auto;
    width: 400px;
}

.Transition
{
  -webkit-transition:1s linear all;
  -moz-transition:1s linear all;
  -o-transition:1s linear all;
  transition:1s linear all; /* future proof */
     



}
.custom-enter,
.custom-leave,
.custom-move {
  -webkit-transition: 1s linear all;
  -moz-transition: 1s linear all;
  -o-transition: 1s linear all;
  transition: 1s linear all;
  position:relative;
}

.custom-enter {
  left:-10px;
  opacity:0;
}
.custom-enter.custom-enter-active {
  left:0;
  opacity:1;
}
.custom-leave {
  left:0;
  opacity:1;
}
.custom-leave.custom-leave-active {
  left:-10px;
  opacity:0;
}

.custom-move {
  opacity:0.5;
}
.custom-move.custom-move-active {
  opacity:1;
}

.h1
{
  text-align: center;
  color:red;
}

.h2
{
  text-align: center;
   color:pink; 
}

